Fix overflow visibility

--- a/frontend/demo/new/index.css
+++ b/frontend/demo/new/index.css
@@ -16,7 +16,8 @@
     width: 100%;
     height: 100%;
     position: relative;
-    overflow: hidden;
+    overflow-x: clip;
+    overflow-y: visible;
     border: solid 1px whitesmoke;
 }
 
